EKS-ingress-files/trey-files/service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/add-base-url: "true"

spec:
  rules:
    - host: a2e334b717b6e4e8c834694c235b9ede-461498701.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /api/*
            pathType: Prefix
            backend:
              service:
                name: aline-gateway-service
                port:
                  number: 8080
          - path: /member(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: member-dashboard-service
                port:
                  number: 3007
          - path: /admin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-portal-service
                port:
                  number: 3000
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: landing-portal-service
                port:
                  number: 3001
